Wed Dec  1 09:20:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver.mpc:
        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.h:
        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/Receiver/Writer_Receiver_exec.cpp:
          Rewritten, using the generated executor files.

Tue Nov 30 15:29:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedWriter/Receiver/Writer_Receiver.idl:
        * connectors/dds4ccm/tests/UnkeyedWriter/Receiver/Writer_Receiver.mpc:
        * connectors/dds4ccm/tests/UnkeyedWriter/Receiver/Writer_Receiver_exec.h:
        * connectors/dds4ccm/tests/UnkeyedWriter/Receiver/Writer_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender.mpc:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.h:
        * connectors/dds4ccm/tests/UnkeyedWriter/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/USER_QOS_PROFILES.xml:
          Rewritten, using the generated executor files.
          Also fixed some bugs in this test. Besides this all there's a check on
          exit in order to check the correct number of samples received.

Tue Nov 30 09:55:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.cpp:
        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender.idl:
        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.h:
        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.h:
        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.cpp: