@@ -15,6 +15,8 @@ module Writer
   component Receiver
   {
     port WriterTestConnector::DDS_Listen info_out;
+    attribute unsigned short iterations;
+    attribute unsigned short keys;
   };
 };
 
