@@ -1,3 +1,11 @@
+Wed Dec  1 10:24:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver.idl:
+        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.h:
+        * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver_exec.cpp:
+        * connectors/dds4ccm/tests/KeyedWriter/descriptors/Plan.cdp:
+          Rewritten, using the generated executor files.
+
 Wed Dec  1 09:20:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/KeyedWriter/Receiver/Writer_Receiver.mpc:
